# PothosGPU

./: .travis.yml  CMakeLists.txt  Changelog.txt  README.md  TODO.txt
Benchmarks/: AbsBenchmark.pothos  AbsMultiChanBenchmark.pothos  CombineComplexBenchmark.pothos  ConjBenchmark.pothos
BlockGen/: .gitignore  BlockExecutionTestAuto.mako.cpp  Blocks.yaml  Factory.mako.cpp  GenBlocks.py
Source/: Approx.cpp  ArrayFireBlock.cpp  ArrayFireBlock.hpp  ArrayFireInfo.cpp  ArrayOpBlock.cpp  BitShift.cpp  BitwiseNot.cpp  BufferConversions.cpp  BufferConversions.hpp  Cast.cpp  Clamp.cpp  Complex.cpp  Constant.cpp  Convolve.cpp  CorrCoef.cpp  Covariance.cpp  DeviceCache.cpp  DeviceCache.hpp  Devices.cpp  EnumConversions.cpp  FFT.cpp  FactoryOnly.cpp  Fallback.cpp  FileSink.cpp  FileSource.cpp  Filter.cpp  Flat.cpp  Functions.hpp  IsInfNaN.cpp  IsX.cpp  LogN.cpp  MinMax.cpp  ModF.cpp  ModuleInfo.cpp  NToOneBlock.cpp  NToOneBlock.hpp  NumericConversions.cpp  ObjectFunctions.cpp  OneToOneBatchBlock.cpp  OneToOneBlock.cpp  (+24 more)
Source/Comms/: Arithmetic.cpp  Comparator.cpp  Log10.cpp  RegistryOnly.cpp  Rotate.cpp  Scale.cpp  SplitComplex.cpp  WaveformSource.cpp
Testing/: ArrayOpBlockTests.cpp  BenchmarkComparisons.cpp  BlockExecutionTests.cpp  BlockExecutionTests.hpp  BlockValueComparisonTests.cpp  CastBlockTest.cpp  ClampBlockTest.cpp  ComparatorBlockTest.cpp  ComplexBlockTest.cpp  FileIOTests.cpp  FlatBlockTest.cpp  IsInfNaNBlockTest.cpp  IsXBlockTest.cpp  NToOneBlockExecutionTest.cpp  OneToOneBlockExecutionTest.cpp  PothosBlocksReplaceImpl.hpp  ReplaceBlockTest.cpp  ScalarOpBlockTests.cpp  SplitComplexBlockTest.cpp  TestArithmeticBlocks.cpp  TestArrayFireConfig.cpp  TestBitwise.cpp  TestBufferCombos.cpp  TestBufferConversions.cpp  TestConjugate.cpp  TestEnumConversions.cpp  TestFFT.cpp  TestFileSink.cpp  TestFileSource.cpp  TestGPUConfig.cpp  TestGamma.cpp  TestInputArrayOptimization.cpp  TestLabels.cpp  TestLog.cpp  TestLogical.cpp  TestManagedDeviceCache.cpp  TestMinMax.cpp  TestModF.cpp  TestNumericConversions.cpp  TestObjectFunctions.cpp  (+12 more)
